--- a/src/main/resources/static/admin/edit_user.html
+++ b/src/main/resources/static/admin/edit_user.html
@@ -456,5 +456,7 @@
     <script src="vendors/scripts/script.min.js"></script>
     <script src="vendors/scripts/process.js"></script>
     <script src="vendors/scripts/layout-settings.js"></script>
+    <script src="../js/admin/admin-common.js"></script>
+    <script src="../js/admin/edit-user.js"></script>
   </body>
 </html>
