--- a/src/main/resources/static/admin/form_product.html
+++ b/src/main/resources/static/admin/form_product.html
@@ -326,6 +326,7 @@
             </div>
           </form>
           <!-- horizontal Basic Forms End -->
+
         </div>
         <div class="footer-wrap pd-20 mb-20 card-box">
           Telescope Admin Template © 2025
@@ -340,5 +341,8 @@
     <script src="vendors/scripts/script.min.js"></script>
     <script src="vendors/scripts/process.js"></script>
     <script src="vendors/scripts/layout-settings.js"></script>
+<!--    <script src="../js/app.js"></script>-->
+    <script src="../js/admin/admin-common.js"></script>
+    <script src="../js/admin/form-product.js"></script>
   </body>
 </html>
