--- a/src/main/resources/static/admin/manage_products.html
+++ b/src/main/resources/static/admin/manage_products.html
@@ -217,15 +217,16 @@
                   <table class="data-table table stripe hover nowrap" id="products-table">
                       <thead>
                           <tr>
-                              <th class="table-plus ">Name</th>
-                              <th>Description</th>
-                              <th>Base Price ($)</th>
-                              <th>Category</th>
-                              <th>Brand</th>
-                              <th class="datatable-nosort">Action</th>
+                            <th class="table-plus">ID</th>
+                            <th>Name</th>
+                            <th>Base Price</th>
+                            <th>Category</th>
+                            <th>Brand</th>
+<!--                            <th>Image</th>-->
+                            <th class="datatable-nosort">Action</th>
                           </tr>
                       </thead>
-                      <tbody>
+                      <tbody id="products-table-body">
                           <!-- Dữ liệu mẫu -->
 
                       </tbody>
@@ -271,7 +272,7 @@
     <script src="src/plugins/datatables/js/pdfmake.min.js"></script>
     <script src="src/plugins/datatables/js/vfs_fonts.js"></script>
     <!-- Datatable Setting js -->
-    <script src="vendors/scripts/datatable-setting.js"></script>
+<!--    <script src="vendors/scripts/datatable-setting.js"></script>-->
 
     <script src="../js/admin/admin-common.js"></script> <!-- File JS chung cho admin (nếu có) -->
     <script src="../js/admin/manage-products.js"></script>
