--- a/src/main/resources/static/admin/manage_orders.html
+++ b/src/main/resources/static/admin/manage_orders.html
@@ -6,6 +6,7 @@
     <title>DeskApp - Bootstrap Admin Dashboard HTML Template</title>
 
     <!-- Site favicon -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -68,6 +69,79 @@
 
       gtag("config", "UA-119386393-1");
     </script>
+      <style>
+          /* Cải thiện giao diện modal */
+          .order-modal-content {
+              border-radius: 10px;
+              box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+              font-family: 'Roboto', sans-serif; /* Font hiện đại, cần include nếu chưa có */
+          }
+
+          .order-modal-content .modal-header {
+              border-bottom: none;
+              padding: 1.5rem;
+          }
+
+          .order-modal-content .modal-title {
+              font-size: 1.25rem;
+              font-weight: 600;
+          }
+
+          .order-modal-content .modal-body {
+              padding: 1.5rem 2rem;
+          }
+
+          .order-modal-content .modal-footer {
+              border-top: none;
+              padding: 1rem 2rem;
+          }
+
+          /* Cải thiện bảng sản phẩm */
+          .order-details-table {
+              background-color: #fff;
+              border-radius: 8px;
+              overflow: hidden;
+          }
+
+          .order-details-table th,
+          .order-details-table td {
+              vertical-align: middle;
+              padding: 0.75rem;
+          }
+
+          .order-details-table thead {
+              background-color: #f8f9fa;
+          }
+
+          .order-details-table tbody tr:hover {
+              background-color: #f1f3f5;
+          }
+
+          /* Cải thiện badge trạng thái */
+          .badge-success {
+              background-color: #28a745;
+          }
+
+          .badge-warning {
+              background-color: #ffc107;
+          }
+
+          .badge-danger {
+              background-color: #dc3545;
+          }
+
+          /* Responsive adjustments */
+          @media (max-width: 576px) {
+              .order-modal-content .modal-dialog {
+                  margin: 0.5rem;
+              }
+              .order-details-table th,
+              .order-details-table td {
+                  font-size: 0.9rem;
+                  padding: 0.5rem;
+              }
+          }
+      </style>
   </head>
   <body>
     <div class="header">
@@ -200,7 +274,7 @@
                       <a href="manage_products.html">Home</a>
                     </li>
                     <li class="breadcrumb-item active" aria-current="page">
-                      DataTable
+                      Manage Orders
                     </li>
                   </ol>
                 </nav>
@@ -215,115 +289,78 @@
 					<h4 class="text-blue h4">Data Table Orders</h4>
 				</div>
 				<div class="pb-20">
-					<table class="data-table table stripe hover nowrap">
+					<table class="data-table table stripe hover nowrap" id="orders-table">
 						<thead>
 							<tr>
-								<th class="table-plus datatable-nosort">Order ID</th>
-								<th>User</th>
-								<th>Total Amount</th>
-								<th>Shipping Address</th>
-								<th>Status</th>
-								<th>Created At</th>
-								<th class="datatable-nosort">Action</th>
+                                <th class="table-plus datatable-nosort">Order ID</th>
+                                <th>Full Name</th>   <!-- << THAY ĐỔI TỪ User -->
+                                <th>Email</th>       <!-- << THÊM CỘT MỚI -->
+                                <th>Total Amount</th>
+                                <!-- <th>Shipping Address</th> Bỏ cột này -->
+                                <th>Status</th>
+                                <th>Created At</th>
+                                <th class="datatable-nosort">Action</th>
 							</tr>
 						</thead>
-						<tbody>
+						<tbody id="orders-table-body">
 							<!-- Dữ liệu mẫu -->
-							<tr>
-								<td class="table-plus">1001</td>
-								<td>John Doe</td>
-								<td>1149.98</td>
-								<td>123 Main St, Springfield, IL 62701</td>
-								<td>
-									<select class="form-control" name="status">
-										<option value="PENDING" selected>PENDING</option>
-										<option value="CONFIRMED">CONFIRMED</option>
-										<option value="SHIPPED">SHIPPED</option>
-										<option value="DELIVERED">DELIVERED</option>
-										<option value="CANCELLED">CANCELLED</option>
-									</select>
-								</td>
-								<td>2025-05-24 14:30:00</td>
-								<td>
-									<div class="dropdown">
-										<a
-											class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle"
-											href="#"
-											role="button"
-											data-toggle="dropdown"
-										>
-											<i class="dw dw-more"></i>
-										</a>
-										<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-											<a class="dropdown-item" href="#" data-toggle="modal" data-target="#orderModal1001"><i class="dw dw-eye"></i> View</a>
-											<a class="dropdown-item" href="edit-order.html"><i class="dw dw-edit2"></i> Edit</a>
-											<a
-												class="dropdown-item"
-												href="delete-order.html"
-												onclick="return confirm('Are you sure?')"
-											><i class="dw dw-delete-3"></i> Delete</a>
-										</div>
-									</div>
-								</td>
-							</tr>
-							
 						</tbody>
 					</table>
 				</div>
 			</div>
 			<!-- Simple Datatable End -->
 
-			<!-- Modal for Order 1001 -->
-			<div class="modal fade" id="orderModal1001" tabindex="-1" role="dialog" aria-labelledby="orderModalLabel1001" aria-hidden="true">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="orderModalLabel1001">Order Details - ID: 1001</h5>
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
-						</div>
-						<div class="modal-body">
-							<div class="order-details">
-								<p><strong>User:</strong> John Doe</p>
-								<p><strong>Total Amount:</strong> 1149.98</p>
-								<p><strong>Shipping Address:</strong> 123 Main St, Springfield, IL 62701</p>
-								<p><strong>Status:</strong> PENDING</p>
-								<p><strong>Created At:</strong> 2025-05-24 14:30:00</p>
-								<hr>
-								<h6>Items in Order</h6>
-								<table class="table">
-									<thead>
-										<tr>
-											<th>Product</th>
-											<th>Color</th>
-											<th>Quantity</th>
-											<th>Unit Price</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<td>Celestron NexStar 8SE</td>
-											<td>Black</td>
-											<td>1</td>
-											<td>799.99</td>
-										</tr>
-										<tr>
-											<td>Sky-Watcher Explorer 150P</td>
-											<td>Black</td>
-											<td>1</td>
-											<td>349.99</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
+<!--			&lt;!&ndash; Modal for Order 1001 &ndash;&gt;-->
+<!--			<div class="modal fade" id="orderModal1001" tabindex="-1" role="dialog" aria-labelledby="orderModalLabel1001" aria-hidden="true">-->
+<!--				<div class="modal-dialog" role="document">-->
+<!--					<div class="modal-content">-->
+<!--						<div class="modal-header">-->
+<!--							<h5 class="modal-title" id="orderModalLabel1001">Order Details - ID: 1001</h5>-->
+<!--							<button type="button" class="close" data-dismiss="modal" aria-label="Close">-->
+<!--								<span aria-hidden="true">&times;</span>-->
+<!--							</button>-->
+<!--						</div>-->
+<!--						<div class="modal-body">-->
+<!--							<div class="order-details">-->
+<!--								<p><strong>User:</strong> John Doe</p>-->
+<!--								<p><strong>Total Amount:</strong> 1149.98</p>-->
+<!--								<p><strong>Shipping Address:</strong> 123 Main St, Springfield, IL 62701</p>-->
+<!--								<p><strong>Status:</strong> PENDING</p>-->
+<!--								<p><strong>Created At:</strong> 2025-05-24 14:30:00</p>-->
+<!--								<hr>-->
+<!--								<h6>Items in Order</h6>-->
+<!--								<table class="table">-->
+<!--									<thead>-->
+<!--										<tr>-->
+<!--											<th>Product</th>-->
+<!--											<th>Color</th>-->
+<!--											<th>Quantity</th>-->
+<!--											<th>Unit Price</th>-->
+<!--										</tr>-->
+<!--									</thead>-->
+<!--									<tbody>-->
+<!--										<tr>-->
+<!--											<td>Celestron NexStar 8SE</td>-->
+<!--											<td>Black</td>-->
+<!--											<td>1</td>-->
+<!--											<td>799.99</td>-->
+<!--										</tr>-->
+<!--										<tr>-->
+<!--											<td>Sky-Watcher Explorer 150P</td>-->
+<!--											<td>Black</td>-->
+<!--											<td>1</td>-->
+<!--											<td>349.99</td>-->
+<!--										</tr>-->
+<!--									</tbody>-->
+<!--								</table>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="modal-footer">-->
+<!--							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
 
           <!-- Simple Datatable End -->
           <!-- Simple Datatable End -->
@@ -354,6 +391,8 @@
     <script src="src/plugins/datatables/js/pdfmake.min.js"></script>
     <script src="src/plugins/datatables/js/vfs_fonts.js"></script>
     <!-- Datatable Setting js -->
-    <script src="vendors/scripts/datatable-setting.js"></script>
+<!--    <script src="vendors/scripts/datatable-setting.js"></script>-->
+    <script src="../js/admin/admin-common.js"></script>
+    <script src="../js/admin/manage-orders.js"></script>
   </body>
 </html>
