--- a/src/main/resources/static/admin/manage_users.html
+++ b/src/main/resources/static/admin/manage_users.html
@@ -210,52 +210,25 @@
 			<!-- Simple Datatable start -->
 			<div class="card-box mb-30">
 				<div class="pd-20">
-					<h4 class="text-blue h4">Data Table Users</h4>
+					<h4 class="text-blue h4">User List</h4>
 				</div>
 				<div class="pb-20">
-					<table class="data-table table stripe hover nowrap">
+					<table class="data-table table stripe hover nowrap" id="users-table">
 						<thead>
-							<tr>
-								<th class="table-plus datatable-nosort">User ID</th>
-								<th>Username</th>
-								<th>Full Name</th>
-								<th>Email</th>
-								<th>Role</th>
-								<th>Created At</th>
-								<th class="datatable-nosort">Action</th>
-							</tr>
+                            <tr>
+                                <th class="table-plus">ID</th>
+                                <th>Username</th>
+                                <th>Full Name</th>
+                                <th>Email</th>
+                                <th>Role</th>
+                                <th>Address</th>
+                                <!-- <th>Created At</th> Có thể thêm nếu muốn -->
+                                <th class="datatable-nosort">Action</th>
+                            </tr>
 						</thead>
-						<tbody>
+						<tbody id="users-table-body">
 							<!-- Dữ liệu mẫu -->
-							<tr>
-								<td class="table-plus">1</td>
-								<td>johndoe</td>
-								<td>John Doe</td>
-								<td>johndoe@example.com</td>
-								<td>ADMIN</td>
-								<td>2025-05-24 14:30:00</td>
-								<td>
-									<div class="dropdown">
-										<a
-											class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle"
-											href="#"
-											role="button"
-											data-toggle="dropdown"
-										>
-											<i class="dw dw-more"></i>
-										</a>
-										<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-											
-											<a class="dropdown-item" href="edit_user.html"><i class="dw dw-edit2"></i> Edit</a>
-											<a
-												class="dropdown-item"
-												href="delete-user.html"
-												onclick="return confirm('Are you sure?')"
-											><i class="dw dw-delete-3"></i> Delete</a>
-										</div>
-									</div>
-								</td>
-							</tr>
+
 						</tbody>
 					</table>
 				</div>
@@ -288,6 +261,7 @@
     <script src="src/plugins/datatables/js/pdfmake.min.js"></script>
     <script src="src/plugins/datatables/js/vfs_fonts.js"></script>
     <!-- Datatable Setting js -->
-    <script src="vendors/scripts/datatable-setting.js"></script>
+    <script src="../js/admin/admin-common.js"></script>
+    <script src="../js/admin/manage-users.js"></script>
   </body>
 </html>
