--- a/src/main/resources/static/admin/manage_users.html
+++ b/src/main/resources/static/admin/manage_users.html
@@ -53,7 +53,7 @@
       href="src/plugins/datatables/css/responsive.bootstrap4.min.css"
     />
     <link rel="stylesheet" type="text/css" href="vendors/styles/style.css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -260,6 +260,7 @@
     <script src="src/plugins/datatables/js/buttons.flash.min.js"></script>
     <script src="src/plugins/datatables/js/pdfmake.min.js"></script>
     <script src="src/plugins/datatables/js/vfs_fonts.js"></script>
+
     <!-- Datatable Setting js -->
     <script src="../js/admin/admin-common.js"></script>
     <script src="../js/admin/manage-users.js"></script>
