--- a/src/main/resources/static/admin/edit_user.html
+++ b/src/main/resources/static/admin/edit_user.html
@@ -440,7 +440,7 @@
                     <!-- Nút điều khiển -->
                     <div class="form-group" style="text-align: center;">
                         <button type="submit" class="btn btn-primary">Save Changes</button>
-                        <a href="manage-users.html" class="btn btn-secondary">Back</a>
+                        <a href="#"  class="btn btn-secondary">Back</a>
                     </div>
                 </form>
                 <!-- horizontal Basic Forms End -->
